use flask wtforms

--- a/templates/save_emails.html
+++ b/templates/save_emails.html
@@ -4,16 +4,13 @@
   <h1>{% block title %}Input Scheduled Email{% endblock %}</h1>
 {% endblock %}
 
+{% from "_formhelpers.html" import render_field %}
 {% block content %}
   <form method="post">
-    <label for="event_id">Event ID</label>
-    <input name="event_id" id="event_id" required>
-    <label for="email_subject">Email Subject</label>
-    <input name="email_subject" id="email_subject" required>
-    <label for="email_content">Email Content</label>
-    <textarea rows="4" cols="50" name="email_content" id="email_content"></textarea>
-    <label for="timestamp">Send Time</label>
-    <input type="datetime-local" name="timestamp" id="timestamp" required>
+    {{ render_field(form.event_id) }}
+    {{ render_field(form.email_subject) }}
+    {{ render_field(form.email_content) }}
+    {{ render_field(form.timestamp) }}
     <input type="submit" value="Save">
   </form>
 {% endblock %}
